feat: add security config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+#JWT CONFIGURATION
+security.jwt.EXPIRATION_IN_MINUTES=${EXPIRATION_IN_MINUTES}
+security.jwt.SECRET_KEY=${SECRET_KEY}
