feat: add cloudinary config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,8 @@
-spring.datasource.url =jdbc:mysql://localhost:3306/db_hyt
+spring.datasource.url =jdbc:mysql://localhost:3306/db_hyt2
+
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 
 spring.datasource.username=root
 spring.datasource.password=root
