--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,3 +11,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+
+#JWT CONFIGURATION
+security.jwt.EXPIRATION_IN_MINUTES=${EXPIRATION_IN_MINUTES}
+security.jwt.SECRET_KEY=${SECRET_KEY}
