Add comments for documentation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,5 @@
-spring.datasource.url =jdbc:mysql://localhost:3306/db_hyt2
-
-cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
-cloudinary.api_key=${CLOUDINARY_API_KEY}
-cloudinary.api_secret=${CLOUDINARY_API_SECRET}
-
+# Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url =jdbc:mysql://localhost:3306/db_hyt3
 spring.datasource.username=root
 spring.datasource.password=root
 # Show or not log for each sql query
@@ -15,6 +11,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# CLOUDINARY CONFIGURATION
+cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+
+#MY JAVA FOLDER PATH
+my.java.folder.path=${MY_JAVA_FOLDER_PATH}
+#MY FRONT FOLDER PATH
+my.front.folder.path=${MY_FRONT_FOLDER_PATH}
+
 
 #JWT CONFIGURATION
 security.jwt.EXPIRATION_IN_MINUTES=${EXPIRATION_IN_MINUTES}
