--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,6 +12,7 @@ spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
+#CLOUDINARY CONFIGURATION
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
