add multipartFile config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,3 +26,8 @@ my.front.folder.path=${MY_FRONT_FOLDER_PATH}
 #JWT CONFIGURATION
 security.jwt.EXPIRATION_IN_MINUTES=${EXPIRATION_IN_MINUTES}
 security.jwt.SECRET_KEY=${SECRET_KEY}
+
+## MULTIPARFILE CONFIGURATION
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
