--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,19 +3,19 @@ spring.datasource.url =jdbc:mysql://localhost:3306/db_hyt3
 spring.datasource.username=root
 spring.datasource.password=root
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
 spring.jpa.hibernate.ddl-auto=update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.user.datasource.driver-class-name=com.mysql.jdbc.driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 spring.jpa.properties.hibernate.format_sql=true
 
 # CLOUDINARY CONFIGURATION
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+cloudinary.folder=${CLOUDINARY_FOLDER}
 
 #MY JAVA FOLDER PATH
 my.java.folder.path=${MY_JAVA_FOLDER_PATH}
